--- a/achievements.html
+++ b/achievements.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Achievements</title>
 </head>
+<link rel="stylesheet" href="css/styles.css">
 <body>
     <h3>My Achievements</h3>
     <ol>
