--- a/contact.html
+++ b/contact.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Contact Me</title>
 </head>
+<link rel="stylesheet" href="css/styles.css">
 <body>
     Mobile number: 7558224026
     <br>
